--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,11 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	 <key>NSCameraUsageDescription</key>
+    <string>This app needs camera access to scan crops.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs photo library access to pick images for analysis.</string>
+    <key>NSMicrophoneUsageDescription</key>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
