--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,18 @@
+buildscript {
+    ext.kotlin_version = '1.9.0' // This may vary, keep your current version if possible
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        // Find this line and update the version
+        classpath 'com.android.tools.build:gradle:8.6.0' 
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+
 allprojects {
     repositories {
         google()
