--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,20 @@ dependencies:
   flutter_svg: ^2.0.9
   fluttertoast: ^8.2.4
   google_fonts: ^6.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
+  image: ^4.5.4
+  image_cropper: ^9.1.0
   image_picker: ^1.1.2
+  intl: ^0.20.2
   path: ^1.9.1
   path_provider: ^2.1.5
   permission_handler: ^11.0.1
   provider: ^6.1.5
   shared_preferences: ^2.2.2
   sizer: ^2.0.15
+  tflite_flutter: ^0.11.0
   web: any
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -32,3 +39,5 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/ml_models/converted_model.tflite
+    - assets/ml_models/labels.txt
