--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
             android:label="cropscan_pro"
             android:name="${applicationName}"
             android:icon="@mipmap/ic_launcher">
+            android:enableOnBackInvokedCallback="true"
              <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
