--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ environment:
 dependencies:
   cached_network_image: ^3.3.1
   camera: ^0.11.1
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^6.1.4
   cupertino_icons: ^1.0.8
   dio: ^5.4.0
   fl_chart: ^0.65.0
@@ -26,8 +26,9 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^11.0.1
   provider: ^6.1.5
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.5.3
   sizer: ^2.0.15
+  sqflite: ^2.4.2
   tflite_flutter: ^0.11.0
   web: any
 dev_dependencies:
